# burmese_ocr

./: areas.txt  pyproject.toml
notebooks/: clean_data.ipynb  notebook.ipynb  simple_nn.pth
src/preprocessing/: src.py
test_scripts/: preprocess.py
